@@ -13,23 +13,11 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>net.sf.trove4j</groupId>
-			<artifactId>trove4j</artifactId>
-			<version>3.0.3</version>
-			<!-- Trove Provided by CraftBukkit -->
-			<scope>provided</scope>
-		</dependency>
-		<!-- Paper - Add Authlib for Profile API -->
-		<dependency>
-			<groupId>com.mojang</groupId>
-			<artifactId>authlib</artifactId>
-			<version>1.5.25</version> <!-- keep in sync with major MC versions -->
-		</dependency>
-		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
 			<version>8.4.4</version>
 		</dependency>
+		<!-- TODO: Remove the next 2 dependencies -->
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -42,35 +30,38 @@
 			<version>1.1.1</version>
 			<scope>compile</scope>
 		</dependency>
-		<!-- bundled with Minecraft, shouldn't ever change -->
+		<!-- -->
 		<dependency>
-			<groupId>com.google.code.findbugs</groupId>
-			<artifactId>jsr305</artifactId>
-			<version>1.3.9</version>
-			<scope>compile</scope>
+			<groupId>org.checkerframework</groupId>
+			<artifactId>checker-qual</artifactId>
+			<version>3.10.0</version>
 		</dependency>
-		<!-- bundled with Minecraft, should be kept in sync -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>21.0</version>
+			<version>30.1-jre</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.code.findbugs</groupId>
+					<artifactId>jsr305</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		<!-- bundled with Minecraft, should be kept in sync -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
+			<version>2.8.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
-			<version>1.19</version>
+			<version>1.28</version>
 		</dependency>
 		<dependency>
 			<groupId>gg.solarmc</groupId>
 			<artifactId>bungeecord-chat</artifactId>
-			<version>1.12-SNAPSHOT</version>
+			<version>0.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -84,16 +75,18 @@
 		</dependency>
 		<!-- Testing -->
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
 		</dependency>
 		<!-- ASM -->
 		<dependency>
@@ -113,14 +106,27 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-			   <!-- <dependencies>
-					we need our custom version as it fixes some bugs on case sensitive file systems
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-compiler-eclipse</artifactId>
-						<version>2.8.2-spigotmc</version>
-					</dependency>
-				</dependencies> -->
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+                <!-- <dependencies>
+                     we need our custom version as it fixes some bugs on case sensitive file systems
+                     <dependency>
+                         <groupId>org.codehaus.plexus</groupId>
+                         <artifactId>plexus-compiler-eclipse</artifactId>
+                         <version>2.8.2-spigotmc</version>
+                     </dependency>
+                 </dependencies> -->
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<trimStackTrace>false</trimStackTrace>
+					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation --enable-preview</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
